QFseventsFileSystemWatcher: switch to QDirListing with no filtering

Improves performance.

Fixes: QTBUG-138374
Pick-to: 6.8
Change-Id: I25227318ec169d6b69dffffd1cf26d7378eab38f
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
Reviewed-by: Ahmad Samir <a.samirh78@gmail.com>
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit ebfcc7e74fd4391a63dc00e99e6ab67aa66aacea)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit e83b2781336d1e9238c19d94f3443e15571525fd)